--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,6 @@ project(git_array_class_encapsulation)
 
 set(CMAKE_CXX_STANDARD 26)
 
-add_executable(git_array_class_encapsulation main.cpp)
+add_executable(git_array_class_encapsulation main.cpp
+        my_array.hpp
+)
